# randomizer

./: LICENSE  pyproject.toml
randomizer/: __main__.py  aspirations.txt  careers.txt  main.py  pysimplegui_main.py  randomize.py  test.py  traits.txt
randomizer/app/: callbacks.py  dashboard.py  ids.py  layout.py
randomizer/app/assets/: 02_colors.css  03_buttons.css  04_checkbox.css  reset.css
randomizer/app/callbacks/: __init__.py  buttons.py  types.py
randomizer/sims/: __init__.py  aspirations.py  careers.py  deaths.py  randomize.py  read_csv.py  skills.py  traits.py  types.py  worlds.py
randomizer/sims/imports/: aspirations.csv  careers.csv  deaths.csv  skills.csv  traits.csv  worlds.csv
