[tool.poetry]
name = "randomizer"
version = "0.1.0"
description = ""
authors = ["Jorik de Vries <jorik.de.vries+randomizer@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pysimplegui = "^4.60.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
