[tool.poetry]
name = "randomizer"
version = "0.1.0"
description = ""
authors = ["Jorik de Vries <jorik.de.vries+randomizer@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
dash = "^2.7.1"
dash-bootstrap-components = "^1.2.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
black = "^22.10.0"
mypy = ">=0.942"
isort = "^5.10.1"
pylint = "^2.15.4"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
