[tool.poetry]
name = "randomizer"
version = "0.1.0"
description = ""
authors = ["Jorik de Vries <jorik.de.vries+randomizer@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
dash = "^2.7.1"
dash-bootstrap-components = "^1.2.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
black = "^22.10.0"
mypy = ">=0.942"
isort = "^5.10.1"
pylint = "^2.15.4"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
warn_unused_configs = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
no_implicit_reexport = true
strict_equality = true
show_error_codes = true
show_error_context = true

[[tool.mypy.overrides]]
module = [
    "dash.*",
    "dash_bootstrap_components.*",
    "dash_bootstrap_templates.*",
    "dash_extensions.*",
    "plotly.*",
]
ignore_missing_imports = true
